overflow fixed error

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -59,5 +59,6 @@ header {
   }
   .rigth {
     padding-right: 5rem;
+    overflow: hidden;
   }
 }
